allowed cards to have its own row

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,53 +1,52 @@
 <!-- first card -->
-
-<div class="row">
-  <div class="col s3 m4" id="card1">
-    <div class="card">
-      <div class="card-image">
-        <img id="cardPhoto1" src="../../assets/images/plant.jpg">
-        <span class="card-title">Our Story</span>
-        <a class="btn-floating halfway-fab waves-effect waves-light red">
-          <i class="material-icons">add</i>
-        </a>
+<div class="cardContainer">
+  <div class="row">
+    <div class="col s3 m4" id="card1">
+      <div class="card">
+        <div class="card-image">
+          <img id="cardPhoto1" src="../../assets/images/plant.jpg">
+          <span class="card-title">Our Story</span>
+          <a class="btn-floating halfway-fab waves-effect waves-light red">
+            <i class="material-icons">add</i>
+          </a>
+        </div>
+        <div class="card-content">
+          <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little
+            markup to use effectively.</p>
+        </div>
       </div>
-      <div class="card-content">
-        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little
-          markup to use effectively.</p>
+    </div>
+
+    <div class="col s3 m4" id="card4">
+      <div class="card">
+        <div class="card-image">
+          <img id="leaderPhoto" src="../../assets/images/leader.jpg">
+          <span class="card-title">Our Leaders</span>
+          <a class="btn-floating halfway-fab waves-effect waves-light red">
+            <i class="material-icons">add</i>
+          </a>
+        </div>
+        <div class="card-content">
+          <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little
+            markup to use effectively.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col s3 m4" id="card2">
+      <div class="card">
+        <div class="card-image">
+          <img id="cardPhoto1" src="../../assets/images/faith.jpg">
+          <span class="card-title">Our Faith</span>
+          <a class="btn-floating halfway-fab waves-effect waves-light red">
+            <i class="material-icons">add</i>
+          </a>
+        </div>
+        <div class="card-content">
+          <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little
+            markup to use effectively.</p>
+        </div>
       </div>
     </div>
   </div>
-
-  <div class="col s3 m4" id="card4">
-    <div class="card">
-      <div class="card-image">
-        <img id="leaderPhoto" src="../../assets/images/leader.jpg">
-        <span class="card-title">Our Leaders</span>
-        <a class="btn-floating halfway-fab waves-effect waves-light red">
-          <i class="material-icons">add</i>
-        </a>
-      </div>
-      <div class="card-content">
-        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little
-          markup to use effectively.</p>
-      </div>
-    </div>
-  </div>
-
-  <div class="col s3 m4" id="card2">
-    <div class="card">
-      <div class="card-image">
-        <img id="cardPhoto1" src="../../assets/images/faith.jpg">
-        <span class="card-title">Our Faith</span>
-        <a class="btn-floating halfway-fab waves-effect waves-light red">
-          <i class="material-icons">add</i>
-        </a>
-      </div>
-      <div class="card-content">
-        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little
-          markup to use effectively.</p>
-      </div>
-    </div>
-  </div>
-
-
 </div>
