fix cards and image

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,6 +45,15 @@
   </div>
 </nav>
 
+<!--  -->
+
+
+<!-- left blank - BODY GOES HERE -->
+
+
+<!--  -->
+
+
 
 <!-- 👇🏼 this code here where the nav lives, to allow switching between routerLinks -->
 <router-outlet></router-outlet>
