--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -86,4 +86,18 @@ image {
     display: block;
     width: 100%;
   }
+  .card .card-image .card-title {
+    color: white;
+    font-weight: 400;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 12vh;
+    max-width: 100%;
+    padding: 24px;
+    top: 2vh;
+    background-color: hsla(120, 90%, 38%, 0.199);
+    border-radius: 2em;
+    line-height: 16px;
+  }
 }
