--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -42,7 +42,7 @@ image {
   .card .card-image {
     position: static;
     display: block;
-    width: 24em;
+    width: 363px;
   }
   #cardPhoto1[_ngcontent-c1] {
     display: block !important;
