adjust image width

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -6,9 +6,9 @@
         <div class="card-image">
           <img id="cardPhoto1" src="../../assets/images/plant.jpg">
           <span class="card-title">Our Story</span>
-          <a class="btn-floating halfway-fab waves-effect waves-light red">
+          <!-- <a class="btn-floating halfway-fab waves-effect waves-light red">
             <i class="material-icons">add</i>
-          </a>
+          </a> -->
         </div>
         <div class="card-content">
           <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little
@@ -22,9 +22,9 @@
         <div class="card-image">
           <img id="leaderPhoto" src="../../assets/images/leader.jpg">
           <span class="card-title">Our Leaders</span>
-          <a class="btn-floating halfway-fab waves-effect waves-light red">
+          <!-- <a class="btn-floating halfway-fab waves-effect waves-light red">
             <i class="material-icons">add</i>
-          </a>
+          </a> -->
         </div>
         <div class="card-content">
           <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little
@@ -38,9 +38,9 @@
         <div class="card-image">
           <img id="cardPhoto1" src="../../assets/images/faith.jpg">
           <span class="card-title">Our Faith</span>
-          <a class="btn-floating halfway-fab waves-effect waves-light red">
+          <!-- <a class="btn-floating halfway-fab waves-effect waves-light red">
             <i class="material-icons">add</i>
-          </a>
+          </a> -->
         </div>
         <div class="card-content">
           <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little
