--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,7 +1,7 @@
 <!-- first card -->
 <div class="cardContainer">
   <div class="row">
-    <div class="col s3 m4" id="card1">
+    <div class="col s3 m4" >
       <div class="card">
         <div class="card-image">
           <img id="cardPhoto1" src="../../assets/images/plant.jpg">
@@ -17,7 +17,7 @@
       </div>
     </div>
 
-    <div class="col s3 m4" id="card4">
+    <div class="col s3 m4">
       <div class="card">
         <div class="card-image">
           <img id="leaderPhoto" src="../../assets/images/leader.jpg">
@@ -33,7 +33,7 @@
       </div>
     </div>
 
-    <div class="col s3 m4" id="card2">
+    <div class="col s3 m4">
       <div class="card">
         <div class="card-image">
           <img id="cardPhoto1" src="../../assets/images/faith.jpg">
