--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -10,14 +10,14 @@
       <div class="col-med-4">
         <form class="form-inline">
           <div class="form-group mb-2">
-            <label for="staticEmail2">Email</label>
-            <input type="email" placeholder="{{userEmail}}">
+            <label for="user">User</label>
+            <input type="text" (input)="userValue($event)">
           </div>
           <div class="form-group mx-sm-3 mb-2">
             <label for="inputPassword2">Password</label>
-            <input type="password" class="form-control" id="inputPassword2" placeholder="Password">
+<input type="password" class="form-control" id="inputPassword2" placeholder="Password" (input)="passwordValue($event)">
           </div>
-          <button type="submit" class="btn btn-primary mb-2">Confirm identity</button>
+          <button type="submit" class="btn btn-primary mb-2" (click)="validate(e)">Confirm identity</button>
         </form>
       </div>
     </div>
