--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,7 +1,7 @@
 <!-- first card -->
-<div class="cardContainer">
+<div class="cardContainer container-fluid">
   <div class="row">
-    <div class="col s3 m4" >
+    <div class="col s3 m4">
       <div class="card">
         <div class="card-image">
           <img id="cardPhoto1" src="../../assets/images/plant.jpg">
@@ -11,7 +11,8 @@
           </a> -->
         </div>
         <div class="card-content">
-          <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little
+          <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I
+            require little
             markup to use effectively.</p>
         </div>
       </div>
@@ -27,7 +28,8 @@
           </a> -->
         </div>
         <div class="card-content">
-          <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little
+          <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I
+            require little
             markup to use effectively.</p>
         </div>
       </div>
@@ -43,7 +45,8 @@
           </a> -->
         </div>
         <div class="card-content">
-          <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little
+          <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I
+            require little
             markup to use effectively.</p>
         </div>
       </div>
