--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -1,25 +1,29 @@
-<!-- Compiled and minified CSS -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
-
-
-<div class="carousel">
-  <a class="carousel-item" href="#one!">
-    <img src="../../assets/images/leaf.jpg">
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="../../assets/images/leaf.jpg" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="../../assets/images/leaf.jpg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="../../assets/images/leaf.jpg" alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
   </a>
-  <a class="carousel-item" href="#two!">
-    <img src="../../assets/images/leaf.jpg">
-  </a>
-  <a class="carousel-item" href="#three!">
-    <img src="../../assets/images/leaf.jpg">
-  </a>
-  <a class="carousel-item" href="#four!">
-    <img src="../../assets/images/leaf.jpg">
-  </a>
-  <a class="carousel-item" href="#five!">
-    <img src="../../assets/images/leaf.jpg">
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
   </a>
 </div>
 
 <!-- <app-server></app-server> -->
 <div class="app-server"></div>
-
