--- a/src/app/events/events.component.scss
+++ b/src/app/events/events.component.scss
@@ -1,8 +1,7 @@
-
 .carousel-inner>.item>img {
-  min-height: 300px;
-  max-height: 300px;
-  width: 100%;
+  min-height: 300px !important;
+  max-height: 300px !important;
+  width: 100% !important;
 }
 
 .carousel.carousel-slider {
