--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,46 +25,49 @@
 </div>
 
 
-<div class="container">
-<div class="section contentBlock">
+<div class="container-fluid">
+  <div class="section contentBlock">
 
     <!--   Icon Section   -->
+    <!-- <div class="row">
+      <div class="col s12 m12">
+        <div class="icon-block">
+          <h2 class="center brown-text"> -->
+    <!-- <i class="material-icons">book</i> -->
+    <!-- </h2> -->
+    <!-- <h5 class="center">November 2018 Series</h5> -->
+    <!-- </div>
+      </div>
+    </div> -->
+
     <div class="row">
-      <div class="col s12 m12">
-        <div class="icon-block">
-          <h2 class="center brown-text">
-            <i class="material-icons">flash_on</i>
-          </h2>
-          <h5 class="center">Speeds up development</h5>
+      <div class="col-md-6">
+        <h5 class="center" style="font-weight: 900;color: #0196888f;">November 2018 Series</h5>
+        <img class="text-center" style="height: 300px;  width: 100%" src="../../assets/images/HisReturn.jpg" alt="lifeZoneLogo">
 
-          <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components.
-            Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
-        </div>
+        <p class="light" style="font-size: 17px;text-align:justify;">Based on Acts 1:11, Pastor Noel S. De Asis aims to
+          equip and encourage the church with many
+          biblical
+          facts about the second coming of the Lord Jesus Christ. This is our blessed hope. This is the anchor that
+          holds us so
+          strong in our faith. This is the promise that brings us hope. Do not miss this series as we learn more of the
+          signs
+          and the purposes of His return.</p>
       </div>
+      <div class="col-md-6">
+        <h5 class="center" style="font-weight: 900;color: #0196888f;">This Week's Message</h5>
+        <img class="text-center" style="height: 300px;  width: 100%" src="../../assets/images/RealisRare.jpg" alt="lifeZoneLogo">
 
-      <div class="col s12 m12">
-        <div class="icon-block">
-          <h2 class="center brown-text">
-            <i class="material-icons">group</i>
-          </h2>
-          <h5 class="center">User Experience Focused</h5>
-
-          <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components
-            and animations that provide more feedback to users. Additionally, a single underlying responsive system across
-            all platforms allow for a more unified user experience.</p>
-        </div>
-      </div>
-
-      <div class="col s12 m4">
-        <div class="icon-block">
-          <h2 class="center brown-text">
-            <i class="material-icons">settings</i>
-          </h2>
-          <h5 class="center">Easy to work with</h5>
-
-          <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are
-            also always open to feedback and can answer any questions a user may have about Materialize.</p>
-        </div>
+        <p class="light" style="font-size: 17px;text-align:justify;">
+          Based on Acts 1:12-26, Pastor Noel S. De Asis aims to equip and encourage the church with this segment in
+          Acts 1 on the
+          replacement of Judas Iscariot as one of the original twelve apostles. This is a very dramatic yet
+          life-changing series
+          as Jesus prayed hard to choose the twelve and his extended grace to Judas Iscariot. Do not miss this series
+          as we learn
+          more from the story of Judas and how we can apply them to our own journey of faith and relationship with our
+          Savior.
+        </p>
       </div>
     </div>
 
@@ -94,11 +97,16 @@
           <i class="mdi-content-send brown-text"></i>
         </h3>
         <h4>Contact Us</h4>
-        <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque
-          tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien
-          id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend
-          sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed
-          ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis
+        <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc
+          nec volutpat. Etiam pellentesque
+          tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a
+          sapien
+          id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam
+          eleifend
+          sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum
+          sed
+          ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum
+          primis
           in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
       </div>
     </div>
