--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -35,7 +35,10 @@
       </div>
     </div>
 
-    <div class="col s3 m4">
+
+    <!-- <a routerLink="/statement-of-faith">statement-of-faith</a> -->
+
+    <div class="col s3 m4" routerLink="/statement-of-faith">
       <div class="card">
         <div class="card-image">
           <img id="cardPhoto1" src="../../assets/images/faith.jpg">
