--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,28 +1,58 @@
-<div id="index-banner" class="parallax-container">
-  <div class="section no-pad-bot">
+<!-- <div id="index-banner" class="parallax-container"> -->
+<!-- <div class="section no-pad-bot">
     <div class="container">
       <br>
       <br>
-      <!-- <h1 class="header center teal-text text-lighten-2">LifeZone Triangle</h1> -->
       <div class="row center">
         <a id="logo-container" href="#" class="brand-logo">
-          <!-- LOGO IMAGE -->
           <img id="lifeZoneLogo" src="../../assets/images/LifeZoneLogo.PNG" alt="lifeZoneLogo">
         </a>
         <h5 class="header col s12 light slogan">Living Life to the Fullest</h5>
       </div>
-      <!-- <div class="row center">
-          <a href="http://facebook.com" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Know More</a>
-        </div> -->
       <br>
       <br>
-
     </div>
   </div>
   <div class="parallax">
     <img src="../../assets/images/leaf.jpg" alt="leaf">
+  </div> -->
+<div class="container-fluid">
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+      <div class="item active">
+        <img src="la.jpg" alt="Los Angeles">
+      </div>
+
+      <div class="item">
+        <img src="chicago.jpg" alt="Chicago">
+      </div>
+
+      <div class="item">
+        <img src="ny.jpg" alt="New York">
+      </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
 </div>
+<!-- </div> -->
+
 
 
 <div class="container-fluid">
