--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -15,9 +15,9 @@
           </div>
           <div class="form-group mx-sm-3 mb-2">
             <label for="inputPassword2">Password</label>
-<input type="password" class="form-control" id="inputPassword2" placeholder="Password" (input)="passwordValue($event)">
+            <input type="password" class="form-control" id="inputPassword2" placeholder="Password" (input)="passwordValue($event)">
           </div>
-          <button type="submit" class="btn btn-primary mb-2" (click)="validate(e)">Confirm identity</button>
+          <button type="submit" class="btn btn-primary mb-2" (click)="validate()">Confirm identity</button>
         </form>
       </div>
     </div>
